--- a/ui/css/style.css
+++ b/ui/css/style.css
@@ -125,3 +125,15 @@ table {
 * {
   box-sizing: border-box;
 }
+[ng-controller] {
+  margin: 10px;
+  padding: 10px;
+  width: 300px;
+  border: 1px solid;
+}
+.odd {
+  background: #ffff00;
+}
+.even {
+  background: orange;
+}
