--- a/ui/less/style.less
+++ b/ui/less/style.less
@@ -11,3 +11,35 @@
 .even {
   background: orange;
 }
+.myclass {
+  background: #ff8080;
+}
+
+.quest {
+  border-bottom: 1px solid #aaa;
+  margin-bottom: 10px;
+}
+.questcolor {
+  background: #F6F6F6;
+}
+.questselectedcolor{
+  background: #ddd;
+}
+.answer {
+  border-bottom: 1px solid #ccc;
+  margin-bottom: 10px;
+}
+.vote {
+  float: left;
+  text-align: center;
+  width: 21px;
+  margin-right: 20px;
+}
+.vote-up, .vote-down{
+  display: block;
+  margin: 0px auto;
+  width: 21px;
+  height: 15px;
+  background: green;
+  cursor: pointer;
+}
