DOM and directives

--- a/ui/css/style.css
+++ b/ui/css/style.css
@@ -131,6 +131,10 @@ table {
   width: 300px;
   border: 1px solid;
 }
+h1 {
+  font-size: 20px;
+  font-weight: bold;
+}
 .odd {
   background: #ffff00;
 }
