--- a/ui/less/style.less
+++ b/ui/less/style.less
@@ -47,3 +47,16 @@ h1 {
   background: green;
   cursor: pointer;
 }
+
+.htmlcode {
+  textarea {
+    margin-bottom: 10px;
+    height: 100px;
+    width: 100%;
+  }
+  p {
+    margin-bottom: 10px;
+    padding: 10px;
+    border: 1px solid green;
+  }
+}
